--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,39 @@
 .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem;
 
-    background-color: aliceblue;
+}
+.links{
+   
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    gap:1.5rem;
+   
+    
+    
+}
+.links a{
+    color: var(--grey);
+    text-decoration: none;
+}
 
+.links a:hover {
+    color: var(--white);
+    transition: all 0.3s;
+}
+.gradient{ 
+    position: absolute;
+    width:800px;
+    height: 150px;
+    margin:auto ;
+    top:-120px;
+    background: #18b2de;
+    filter:blur(100px);
+    z-index:-1!important;
+}
+.active {
+    color: var(--white) !important;
 }
