--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,18 @@ body {
 input {
 font-family: 'Inter', sans-serif;
 }
- 
+ .input-wrapper {
+   width: 80vw;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   margin: 0 auto;
+   margin-top: 4rem;
+ }
+ .input-wrapper h1 {
+   font-size: 1.5rem;
+   text-align: center;
+   font-weight: 400;
+   margin-bottom: 2rem;
+ }
