--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,28 @@ font-family: 'Inter', sans-serif;
    font-weight: 400;
    margin-bottom: 2rem;
  }
+ .cursor {
+   position: fixed;
+   transform: translateX(-50%) translateY(-50%);
+   pointer-events: none;
+   background-color: var(--blue);
+   z-index: 10000;
+   border: 2px solid var(--blue);
+   height: 0.3rem;
+   width: 0.3rem;
+   border-radius: 50%;
+   transition: all 200ms ease-out;
+ }
+
+ .cursor-pointer {
+   position: fixed;
+   transform: translateX(-50%) translateY(-50%);
+   pointer-events: none;
+   background-color: transparent;
+   border-radius: 50%;
+   z-index: 10000;
+   border: 2px solid var(--blue);
+   height: 2rem;
+   width: 2rem;
+   transition: all 400ms ease-out;
+ }
