--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,32 @@ font-family: 'Inter', sans-serif;
   gap:1rem;
   flex-wrap: wrap;
  }
+ .podcast-title{
+  text-align: left!important;
+  width: 100%;
+ }
+  
+        .banner-wrapper {
+          background: linear-gradient(177.7deg,
+              rgba(58, 129, 191, 0.3) 1.63%,
+              rgba(65, 48, 90, 0.009) 148.18%);
+          border-radius: 1rem;
+          padding: 0.5rem;
+          height: 300px;
+          width: 100%;
+        }
+ .banner-wrapper img{
+  width:100%;
+  height: 300px;
+  border-radius: 1rem;
+  object-fit: cover;
+ } 
+ .podcast-description{
+  text-align: left;
+  color: var(--purple-grey);
+
+ }
+ .podcast-title-heading {
+   text-align: left !important;
+   width: 100%;
+ }
