--- a/src/components/AudioPlayer/style.css
+++ b/src/components/AudioPlayer/style.css
@@ -10,20 +10,32 @@
     gap: 1rem;
     background-color: rgba(14, 2, 21, 0.5);
 }
-.display-image-player{
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
 
+.display-image-player {
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
+    margin: 0rem 1rem;
 }
-.duration-range{
+
+.duration-range {
     filter: hue-rotate(25deg);
-    width: 85%;
-}
-.duration-flex{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 1rem;
     width: 100%;
+}
+
+.duration-flex {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5rem;
+    width: 50%;
+}
+
+.volume-range {
+    filter: hue-rotate(25deg);
+    width: 25%;
+}
+
+.audio-btn {
+    cursor: pointer;
 }
